Tue Jun 23 13:04:06 GMT 2015  Olly Betts <olly@survex.com>

	* api/,backends/remote/net_postlist.cc,
	  backends/remote/remote-database.cc,
	  geospatial/latlong_posting_source.cc,net/,tests/unittest.cc: Split
	  decode_length() into versions which decode a 32 vs 64 bit value,
	  and which check that there's at least the decoded length in bytes
	  in the source data.  (Fixes #678 and helps #385)

Tue Jun 23 11:49:15 GMT 2015  Olly Betts <olly@survex.com>

	* net/remoteserver.cc: Check length of key in MSG_SETMETADATA.

Sat Jun 20 13:05:50 GMT 2015  Olly Betts <olly@survex.com>

	* common/str.h,tests/,tests/harness/,tests/internaltest.cc,
	  tests/perftest/perftest.cc,tests/perftest/perftest_matchdecider.cc,
	  tests/perftest/perftest_randomidx.cc,tests/queryparsertest.cc,
	  tests/soaktest/soaktest_queries.cc,tests/termgentest.cc,
	  tests/unittest.cc: Make str() private to the library, and use
	  C++11 std::to_string() to convert numbers to std::string in the
	  testsuite.  (ticket #63)

Sat Jun 20 12:32:13 GMT 2015  Olly Betts <olly@survex.com>

	* tests/api_unicode.cc: Fix trailing whitespace introduced by previous
	  commit.

Sat Jun 20 06:31:27 GMT 2015  Olly Betts <olly@survex.com>

	* tests/api_unicode.cc,unicode/Makefile.mk,
	  unicode/UnicodeData-README.txt,unicode/UnicodeData.txt:
	  Update to Unicode 8.0.0.  (fixes #680)

Thu Jun 11 11:57:50 GMT 2015  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Remove XAPIAN_CONST_FUNCTION marker
	  from sortable_serialise_() helper, as it writes to the passed in
	  buffer, so it isn't const or pure.  Fixes decvalwtsource2 testcase
	  failure when compiled with clang.

Thu Jun 11 05:05:27 GMT 2015  Olly Betts <olly@survex.com>

	* examples/xapian-metadata.cc: Extend "list" subcommand to take
	  optional key prefix.

Sat Jun 06 11:02:50 GMT 2015  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Use C++11 auto and container
	  iteration for cleaner code.
